--- a/gestion/templates/gestion/tableau_de_bord_proprietaire.html
+++ b/gestion/templates/gestion/tableau_de_bord_proprietaire.html
@@ -1,3 +1,4 @@
+<!--
 {% extends "gestion/base.html" %}
 {% load static %}
 
@@ -5,7 +6,7 @@
 
 {% block content %}
 <div class="container-fluid">
-    <!-- Page Heading -->
+    <!-- Page Heading 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">Mon Tableau de Bord</h1>
         <a href="{% url 'gestion:generer_rapport_financier_pdf' %}" class="btn btn-sm btn-primary shadow-sm">
@@ -13,7 +14,7 @@
         </a>
     </div>
 
-    <!-- Widgets -->
+    <!-- Widgets 
     <div class="row">
         <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-left-primary shadow h-100 py-2">
@@ -69,7 +70,7 @@
         </div>
     </div>
 
-    <!-- Liste des immeubles -->
+    <!-- Liste des immeubles 
     <div class="row">
         <div class="col-12">
             <div class="card shadow mb-4">
@@ -111,3 +112,4 @@
     </div>
 </div>
 {% endblock %}
+-->
