--- a/gestion/templates/gestion/proprietaire_detail.html
+++ b/gestion/templates/gestion/proprietaire_detail.html
@@ -1,4 +1,4 @@
-{% extends "gestion/base.html" %}
+{% extends 'gestion/base.html' %}
 
 {% block title %}Détails de {{ proprietaire_user.get_full_name|default:proprietaire_user.username }}{% endblock %}
 
