--- a/gestion/templates/gestion/rapport_financier.html
+++ b/gestion/templates/gestion/rapport_financier.html
@@ -1,4 +1,5 @@
-{% extends "gestion/base.html" %}
+{% extends 'gestion/base.html' %}
+
 {% load static %}
 
 {% block title %}{{ page_title|default:"Rapport Financier" }}{% endblock %}
