--- a/gestion/templates/gestion/register.html
+++ b/gestion/templates/gestion/register.html
@@ -20,69 +20,47 @@
                             </div>
                         {% endif %}
 
-                        <div class="mb-3">
-                            <label for="{{ form.username.id_for_label }}" class="form-label">{{ form.username.label }}</label>
-                            {{ form.username }}
-                            {{ form.username.errors }}
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.first_name.id_for_label }}" class="form-label">{{ form.first_name.label }}</label>
+                                <input type="text" name="{{ form.first_name.name }}" id="{{ form.first_name.id_for_label }}" class="form-control" value="{{ form.first_name.value|default:'' }}">
+                                <div class="text-danger mt-1">{{ form.first_name.errors }}</div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.last_name.id_for_label }}" class="form-label">{{ form.last_name.label }}</label>
+                                <input type="text" name="{{ form.last_name.name }}" id="{{ form.last_name.id_for_label }}" class="form-control" value="{{ form.last_name.value|default:'' }}">
+                                <div class="text-danger mt-1">{{ form.last_name.errors }}</div>
+                            </div>
                         </div>
 
                         <div class="mb-3">
                             <label for="{{ form.email.id_for_label }}" class="form-label">{{ form.email.label }}</label>
-                            {{ form.email }}
-                            {{ form.email.errors }}
+                            <input type="email" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="form-control" value="{{ form.email.value|default:'' }}">
+                            <div class="text-danger mt-1">{{ form.email.errors }}</div>
                         </div>
 
                         <div class="mb-3">
                             <label for="{{ form.telephone.id_for_label }}" class="form-label">{{ form.telephone.label }}</label>
-                            {{ form.telephone }}
-                            {{ form.telephone.errors }}
+                            <input type="text" name="{{ form.telephone.name }}" id="{{ form.telephone.id_for_label }}" class="form-control" value="{{ form.telephone.value|default:'' }}">
+                            <div class="text-danger mt-1">{{ form.telephone.errors }}</div>
                         </div>
 
                         <div class="mb-3">
-                            <label class="form-label">{{ form.user_type.label }}</label>
-                            {{ form.user_type.errors }}
-                            <div class="d-flex">
-                            {% for radio in form.user_type %}
-                                <div class="form-check me-4">
-                                    {{ radio.tag }}
-                                    <label class="form-check-label" for="{{ radio.id_for_label }}">{{ radio.choice_label }}</label>
-                                </div>
-                            {% endfor %}
-                            </div>
+                            <label for="{{ form.addresse.id_for_label }}" class="form-label">{{ form.addresse.label }}</label>
+                            <input type="text" name="{{ form.addresse.name }}" id="{{ form.addresse.id_for_label }}" class="form-control" value="{{ form.addresse.value|default:'' }}">
+                            <div class="text-danger mt-1">{{ form.addresse.errors }}</div>
                         </div>
-
-                        <!-- Champs spécifiques à l'agence, cachés par défaut -->
-                        <div id="agence-fields">
-                            <div class="mb-3">
-                                <label for="{{ form.rccm.id_for_label }}" class="form-label">{{ form.rccm.label }}</label>
-                                {{ form.rccm }}
-                                {{ form.rccm.errors }}
-                            </div>
-                            <div class="mb-3">
-                                <label for="{{ form.nif.id_for_label }}" class="form-label">{{ form.nif.label }}</label>
-                                {{ form.nif }}
-                                {{ form.nif.errors }}
-                            </div>
+            
+                        <div class="mb-3">
+                            <label for="{{ form.password.id_for_label }}" class="form-label">{{ form.password.label }}</label>
+                            <input type="password" name="{{ form.password.name }}" id="{{ form.password.id_for_label }}" class="form-control">
+                            <div class="text-danger mt-1">{{ form.password.errors }}</div>
                         </div>
 
                         <div class="mb-3">
-                            <label for="{{ form.password1.id_for_label }}" class="form-label">{{ form.password1.label }}</label>
-                            {{ form.password1 }}
-                            {{ form.password1.errors }}
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="{{ form.password2.id_for_label }}" class="form-label">{{ form.password2.label }}</label>
-                            {{ form.password2 }}
-                            {{ form.password2.errors }}
-                        </div>
-
-                        <div class="form-check mb-4">
-                            {{ form.terms_accepted }}
-                            <label class="form-check-label" for="{{ form.terms_accepted.id_for_label }}">
-                                {{ form.terms_accepted.label }}
-                            </label>
-                            {{ form.terms_accepted.errors }}
+                            <label for="{{ form.confirm_password.id_for_label }}" class="form-label">{{ form.confirm_password.label }}</label>
+                            <input type="password" name="{{ form.confirm_password.name }}" id="{{ form.confirm_password.id_for_label }}" class="form-control">
+                            <div class="text-danger mt-1">{{ form.confirm_password.errors }}</div>
                         </div>
 
                         <div class="d-grid">
